# weekly-log

./: .gitignore  LICENSE  weekly-log.cabal
app/: Main.hs
